[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/ui/containers/ItemProperty.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_assets/gui/icons/weight.png" type="Texture" id=2]
[ext_resource path="res://game_assets/gui/icons/pistol.png" type="Texture" id=4]
[ext_resource path="res://game/ui/containers/InventoryEntry.gd" type="Script" id=6]
[ext_resource path="res://game_assets/fonts/Dosis-Light.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.372549, 0.321569, 0.188235, 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
use_filter = true
font_data = ExtResource( 7 )

[node name="Control" type="PanelContainer"]
anchor_right = 0.285
anchor_bottom = 0.03
margin_right = 0.264954
margin_bottom = 12.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.372549, 0.321569, 0.188235, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 562.0
margin_bottom = 42.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="MainHBox" type="HBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 556.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainHBox"]
margin_right = 365.0
margin_bottom = 38.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Name" type="Label" parent="MarginContainer/MainHBox/HBoxContainer"]
margin_top = 7.0
margin_right = 200.0
margin_bottom = 31.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 2 )
clip_text = true

[node name="Control" parent="MarginContainer/MainHBox/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_right = 287.0
margin_bottom = 38.0
mouse_filter = 2
prop_name = "1D10"
prop_icon = ExtResource( 4 )

[node name="Control2" parent="MarginContainer/MainHBox/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 307.0
margin_right = 365.0
margin_bottom = 38.0
mouse_filter = 2
prop_name = "1Kg"
prop_icon = ExtResource( 2 )
[connection signal="gui_input" from="." to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
